--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Perdearkası</title>
-  <link rel="stylesheet" href="../styles/style.css" />
+  <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -63,10 +63,10 @@
         <div class="section-content">
           <div class="hero-wrapper">
             <div class="netflix-slider">
-              <img src="../fotos/Batman.jpg">
-              <img src="../fotos/Interstellar-IMAX-Poster-Wallpaper-1152x720-960x600.jpg">
-              <img src="../fotos/MV5BMjAxMzY3NjcxNF5BMl5BanBnXkFtZTcwNTI5OTM0Mw@@._V1_.jpg">
-              <img src="../fotos/shutter-island.jpg">
+              <img src="src/fotos/Batman.jpg">
+              <img src="src/fotos/Interstellar-IMAX-Poster-Wallpaper-1152x720-960x600.jpg">
+              <img src="src/fotos/MV5BMjAxMzY3NjcxNF5BMl5BanBnXkFtZTcwNTI5OTM0Mw@@._V1_.jpg">
+              <img src="src/fotos/shutter-island.jpg">
             </div>
           </div>
         </div>
@@ -92,7 +92,7 @@
 
           <div class="catalog-grid">
             <div class="movie-card">
-              <img src="../fotos/a.jpg">
+              <img src="src/fotos/a.jpg">
               <span>The Monkey</span>
               <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -101,7 +101,7 @@
             </div>
 
             <div class="movie-card">
-              <img src="../fotos/b.jpg">
+              <img src="src/fotos/b.jpg">
               <span>28 Years Later</span>
               <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -110,7 +110,7 @@
             </div>
 
             <div class="movie-card">
-              <img src="../fotos/c.jpg">
+              <img src="src/fotos/c.jpg">
               <span>Captain America: Brave New World</span>
               <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -119,7 +119,7 @@
             </div>
 
             <div class="movie-card">
-              <img src="../fotos/d.jpg">
+              <img src="src/fotos/d.jpg">
               <span>Der Tiger</span>
               <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -135,7 +135,7 @@
 
           <div class="catalog-grid">
             <div class="movie-card">
-              <img src="../fotos/e.jpg">
+              <img src="src/fotos/e.jpg">
               <h3>IT: Welcome to Derry</h3>
               <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -143,7 +143,7 @@
               </div>
             </div>
             <div class="movie-card">
-              <img src="../fotos/f.jpg">
+              <img src="src/fotos/f.jpg">
               <h3>Stranger Things</h3>
               <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -151,7 +151,7 @@
               </div>
             </div>
             <div class="movie-card">
-              <img src="../fotos/g.jpg">
+              <img src="src/fotos/g.jpg">
               <h3>Spartacus: House Of Ashur</h3>
               <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -159,7 +159,7 @@
               </div>
             </div>
             <div class="movie-card">
-              <img src="../fotos/k.jpg">
+              <img src="src/fotos/k.jpg">
               <h3>From</h3>
               <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -301,7 +301,7 @@
     <section class="page" id="detail">
 
       <section class="detail-hero">
-        <img class="detail-poster" src="../fotos/Batman.jpg" />
+        <img class="detail-poster" src="src/fotos/Batman.jpg" />
 
         <div class="detail-info">
           <h1>The Batman</h1>
@@ -314,9 +314,9 @@
       </section>
 
       <section class="detail-gallery">
-        <img src="../fotos/Batman.jpg">
-        <img src="../fotos/shutter-island.jpg">
-        <img src="../fotos/MV5BMjAxMzY3NjcxNF5BMl5BanBnXkFtZTcwNTI5OTM0Mw@@._V1_.jpg">
+        <img src="src/fotos/Batman.jpg">
+        <img src="src/fotos/shutter-island.jpg">
+        <img src="src/fotos/MV5BMjAxMzY3NjcxNF5BMl5BanBnXkFtZTcwNTI5OTM0Mw@@._V1_.jpg">
       </section>
 
     </section>
@@ -324,7 +324,7 @@
 
   </main>
 
-  <script src="../components/main.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
