fix layout and pages navigation

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" data-page="contact">
-            <i class="fa-solid fa-envelope"></i> İletişim
+          <a class="nav-link" data-page="explore">
+            <i class="fa-solid fa-compass"></i> Keşfet
           </a>
         </li>
 
@@ -44,8 +44,8 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" data-page="explore">
-            <i class="fa-solid fa-compass"></i> Keşfet
+          <a class="nav-link" data-page="contact">
+            <i class="fa-solid fa-envelope"></i> İletişim
           </a>
         </li>
       </ul>
@@ -63,15 +63,16 @@
         <div class="section-content">
           <div class="hero-wrapper">
             <div class="netflix-slider">
-              <img src="src/fotos/Batman.jpg" data-movie="batman">
-              <img src="src/fotos/Interstellar-IMAX-Poster-Wallpaper-1152x720-960x600.jpg" data-movie="interstellar">
-              <img src="src/fotos/MV5BMjAxMzY3NjcxNF5BMl5BanBnXkFtZTcwNTI5OTM0Mw@@._V1_.jpg" data-movie="inception">
-              <img src="src/fotos/shutter-island.jpg" data-movie="shutter-island">
+              <img src="foto/Batman.jpg">
+              <img src="foto/Interstellar-IMAX-Poster-Wallpaper-1152x720-960x600.jpg">
+              <img src="foto/MV5BMjAxMzY3NjcxNF5BMl5BanBnXkFtZTcwNTI5OTM0Mw@@._V1_.jpg">
+              <img src="foto/shutter-island.jpg">
             </div>
           </div>
         </div>
       </section>
 
+      <button class="nav-down-btn"><i class="fa-solid fa-chevron-down"></i></button>
     </section>
 
     <!-- FİLMLER -->
@@ -82,8 +83,8 @@
 
         <!-- BAŞLIK -->
         <div class="catalog-header">
-          <h1>Filmler</h1>
-          <p>Senin için seçilen, öne çıkan ve popüler filmler</p>
+          <h1>Filmler/Diziler</h1>
+          <p>Senin için seçilen, öne çıkan ve popüler filmler/diziler</p>
         </div>
 
         <!-- KATEGORİ -->
@@ -92,38 +93,38 @@
 
           <div class="catalog-grid">
             <div class="movie-card">
-              <img src="src/fotos/a.jpg">
+              <img src="foto/a.jpg">
               <span>The Monkey</span>
               <div class="rating">
                 <i class="fa-solid fa-star"></i>
-                <span>8.1</span>
+                <span>5.9</span>
               </div>
             </div>
 
             <div class="movie-card">
-              <img src="src/fotos/28-years-later.jpg">
+              <img src="foto/b.jpg">
               <span>28 Years Later</span>
               <div class="rating">
                 <i class="fa-solid fa-star"></i>
-                <span>8.1</span>
+                <span>6.6</span>
               </div>
             </div>
 
             <div class="movie-card">
-              <img src="src/fotos/c.jpg">
+              <img src="foto/c.jpg">
               <span>Captain America: Brave New World</span>
               <div class="rating">
                 <i class="fa-solid fa-star"></i>
-                <span>8.1</span>
+                <span>5.6</span>
               </div>
             </div>
 
             <div class="movie-card">
-              <img src="src/fotos/d.jpg">
+              <img src="foto/d.jpg">
               <span>Der Tiger</span>
               <div class="rating">
                 <i class="fa-solid fa-star"></i>
-                <span>8.1</span>
+                <span>6.6</span>
               </div>
             </div>
           </div>
@@ -135,35 +136,35 @@
 
           <div class="catalog-grid">
             <div class="movie-card">
-              <img src="src/fotos/e.jpg">
+              <img src="foto/e.jpg">
               <h3>IT: Welcome to Derry</h3>
               <div class="rating">
                 <i class="fa-solid fa-star"></i>
-                <span>8.1</span>
+                <span>8.0</span>
               </div>
             </div>
             <div class="movie-card">
-              <img src="src/fotos/f.jpg">
+              <img src="foto/f.jpg">
               <h3>Stranger Things</h3>
               <div class="rating">
                 <i class="fa-solid fa-star"></i>
-                <span>8.1</span>
+                <span>5.2</span>
               </div>
             </div>
             <div class="movie-card">
-              <img src="src/fotos/g.jpg">
+              <img src="foto/g.jpg">
               <h3>Spartacus: House Of Ashur</h3>
               <div class="rating">
                 <i class="fa-solid fa-star"></i>
-                <span>8.1</span>
+                <span>5.2</span>
               </div>
             </div>
             <div class="movie-card">
-              <img src="src/fotos/k.jpg">
+              <img src="foto/k.jpg">
               <h3>From</h3>
               <div class="rating">
                 <i class="fa-solid fa-star"></i>
-                <span>8.1</span>
+                <span>7.8</span>
               </div>
             </div>
           </div>
@@ -174,6 +175,46 @@
       <button class="nav-down-btn"><i class="fa-solid fa-chevron-down"></i></button>
     </section>
 
+
+    <!-- KEŞFET -->
+    <section class="page" id="explore">
+      <button class="nav-up-btn"><i class="fa-solid fa-chevron-up"></i></button>
+
+      <div class="explore-container">
+
+        <div class="explore-header">
+          <h1>Keşfet</h1>
+          <p>Ruh haline, türe ve popülerliğe göre seçilmiş içerikler</p>
+        </div>
+
+        <div class="explore-grid">
+
+          <div class="explore-card">
+            <h3>Karanlık & Gerilim</h3>
+            <span>Batman, Se7en, Prisoners</span>
+          </div>
+
+          <div class="explore-card">
+            <h3>Bilim Kurgu</h3>
+            <span>Interstellar, Arrival, Blade Runner</span>
+          </div>
+
+          <div class="explore-card">
+            <h3>Psikolojik</h3>
+            <span>Shutter Island, Black Swan</span>
+          </div>
+
+          <div class="explore-card">
+            <h3>Kült Yapımlar</h3>
+            <span>Fight Club, Pulp Fiction</span>
+          </div>
+
+        </div>
+
+      </div>
+
+      <button class="nav-down-btn"><i class="fa-solid fa-chevron-down"></i></button>
+    </section>
 
     <!-- HAKKIMIZDA -->
     <!-- HAKKIMIZDA -->
@@ -252,81 +293,36 @@
         </div>
 
       </div>
-      <button class="nav-down-btn"><i class="fa-solid fa-chevron-down"></i></button>
     </section>
-
-    <!-- KEŞFET -->
-    <section class="page" id="explore">
-      <button class="nav-up-btn"><i class="fa-solid fa-chevron-up"></i></button>
-
-      <div class="explore-container">
-
-        <div class="explore-header">
-          <h1>Keşfet</h1>
-          <p>Ruh haline, türe ve popülerliğe göre seçilmiş içerikler</p>
-        </div>
-
-        <div class="explore-grid">
-
-          <div class="explore-card">
-            <h3>Karanlık & Gerilim</h3>
-            <span>Batman, Se7en, Prisoners</span>
-          </div>
-
-          <div class="explore-card">
-            <h3>Bilim Kurgu</h3>
-            <span>Interstellar, Arrival, Blade Runner</span>
-          </div>
-
-          <div class="explore-card">
-            <h3>Psikolojik</h3>
-            <span>Shutter Island, Black Swan</span>
-          </div>
-
-          <div class="explore-card">
-            <h3>Kült Yapımlar</h3>
-            <span>Fight Club, Pulp Fiction</span>
-          </div>
-
-        </div>
-
-      </div>
-
-      <button class="nav-down-btn"><i class="fa-solid fa-chevron-down"></i></button>
-    </section>
-
-
-
-
-    <!-- FİLM DETAY -->
-    <section class="page" id="detail">
-
-      <section class="detail-hero">
-        <button class="detail-close-btn"><i class="fa-solid fa-xmark"></i></button>
-        <img class="detail-poster" src="src/fotos/Batman.jpg" />
-
-        <div class="detail-info">
-          <h1>The Batman</h1>
-          <p>
-            Gotham’ın karanlık yüzü…
-            Dedektiflik, suç ve kaos.
-          </p>
-          <button class="play-btn">▶ İzle</button>
-        </div>
-      </section>
-
-      <section class="detail-gallery">
-        <img src="src/fotos/Batman.jpg">
-        <img src="src/fotos/shutter-island.jpg">
-        <img src="src/fotos/MV5BMjAxMzY3NjcxNF5BMl5BanBnXkFtZTcwNTI5OTM0Mw@@._V1_.jpg">
-      </section>
-
-    </section>
-
-
   </main>
 
-  <script src="main.js"></script>
+  <!-- FİLM DETAY - OVERLAY -->
+  <section class="page detail-overlay" id="detail">
+    <button class="detail-close-btn"><i class="fa-solid fa-times"></i></button>
+
+    <section class="detail-hero">
+      <img class="detail-poster" src="foto/Batman.jpg" />
+
+      <div class="detail-info">
+        <h1>The Batman</h1>
+        <p>
+          Gotham'ın karanlık yüzü…
+          Dedektiflik, suç ve kaos.
+        </p>
+        <button class="play-btn">▶ İzle</button>
+      </div>
+    </section>
+
+    <section class="detail-gallery">
+      <img src="foto/Batman.jpg">
+      <img src="foto/shutter-island.jpg">
+      <img src="foto/MV5BMjAxMzY3NjcxNF5BMl5BanBnXkFtZTcwNTI5OTM0Mw@@._V1_.jpg">
+    </section>
+
+  </section>
+
+
+  <script src="script.js"></script>
 </body>
 
 </html>
