--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
         <div class="section-content">
           <div class="hero-wrapper">
             <div class="netflix-slider">
-              <img src="foto/Batman.jpg">
-              <img src="foto/Interstellar-IMAX-Poster-Wallpaper-1152x720-960x600.jpg">
-              <img src="foto/MV5BMjAxMzY3NjcxNF5BMl5BanBnXkFtZTcwNTI5OTM0Mw@@._V1_.jpg">
-              <img src="foto/shutter-island.jpg">
+              <img src="src/fotos/Batman.jpg">
+              <img src="src/fotos/Interstellar-IMAX-Poster-Wallpaper-1152x720-960x600.jpg">
+              <img src="src/fotos/MV5BMjAxMzY3NjcxNF5BMl5BanBnXkFtZTcwNTI5OTM0Mw@@._V1_.jpg">
+              <img src="src/fotos/shutter-island.jpg">
             </div>
           </div>
         </div>
@@ -93,7 +93,7 @@
 
           <div class="catalog-grid">
             <div class="movie-card">
-              <img src="foto/a.jpg">
+              <img src="src/fotos/a.jpg">
               <span>The Monkey</span>
               <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -102,7 +102,7 @@
             </div>
 
             <div class="movie-card">
-              <img src="foto/b.jpg">
+              <img src="src/fotos/b.jpg">
               <span>28 Years Later</span>
               <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -111,7 +111,7 @@
             </div>
 
             <div class="movie-card">
-              <img src="foto/c.jpg">
+              <img src="src/fotos/c.jpg">
               <span>Captain America: Brave New World</span>
               <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -120,7 +120,7 @@
             </div>
 
             <div class="movie-card">
-              <img src="foto/d.jpg">
+              <img src="src/fotos/d.jpg">
               <span>Der Tiger</span>
               <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -136,7 +136,7 @@
 
           <div class="catalog-grid">
             <div class="movie-card">
-              <img src="foto/e.jpg">
+              <img src="src/fotos/e.jpg">
               <h3>IT: Welcome to Derry</h3>
               <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -144,7 +144,7 @@
               </div>
             </div>
             <div class="movie-card">
-              <img src="foto/f.jpg">
+              <img src="src/fotos/f.jpg">
               <h3>Stranger Things</h3>
               <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -152,7 +152,7 @@
               </div>
             </div>
             <div class="movie-card">
-              <img src="foto/g.jpg">
+              <img src="src/fotos/g.jpg">
               <h3>Spartacus: House Of Ashur</h3>
               <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -160,7 +160,7 @@
               </div>
             </div>
             <div class="movie-card">
-              <img src="foto/k.jpg">
+              <img src="src/fotos/k.jpg">
               <h3>From</h3>
               <div class="rating">
                 <i class="fa-solid fa-star"></i>
@@ -301,7 +301,7 @@
     <button class="detail-close-btn"><i class="fa-solid fa-times"></i></button>
 
     <section class="detail-hero">
-      <img class="detail-poster" src="foto/Batman.jpg" />
+      <img class="detail-poster" src="src/fotos/Batman.jpg" />
 
       <div class="detail-info">
         <h1>The Batman</h1>
@@ -314,15 +314,15 @@
     </section>
 
     <section class="detail-gallery">
-      <img src="foto/Batman.jpg">
-      <img src="foto/shutter-island.jpg">
-      <img src="foto/MV5BMjAxMzY3NjcxNF5BMl5BanBnXkFtZTcwNTI5OTM0Mw@@._V1_.jpg">
+      <img src="src/fotos/Batman.jpg">
+      <img src="src/fotos/shutter-island.jpg">
+      <img src="src/fotos/MV5BMjAxMzY3NjcxNF5BMl5BanBnXkFtZTcwNTI5OTM0Mw@@._V1_.jpg">
     </section>
 
   </section>
 
 
-  <script src="script.js"></script>
+  <script src="main.js"></script>
 </body>
 
 </html>
