--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             </div>
 
             <div class="movie-card">
-              <img src="src/fotos/b.jpg">
+              <img src="src/fotos/28-years-later.jpg">
               <span>28 Years Later</span>
               <div class="rating">
                 <i class="fa-solid fa-star"></i>
